# harbor

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
alembic/versions/: 20260409_0008_add_openai_project_dry_run_log_registry.py  20260409_0009_add_openai_project_chat_session_registry.py
config/: .env.example
docs/: A0_ACCEPTANCE_RECORD_2026-04-06.md  A0_BASELINE_ACCEPTANCE.md  A0_CONSOLIDATION_CHECKLIST.md  BLUEPRINT_MODEL_v0_1.md  DELIVERY_PROTOCOL.md  DEPLOYMENT_UND_OPENAI_GUIDE.md  DOMAIN_MODEL_v0_1.md  ENGINEERING_MANIFEST.md  FUNCTIONAL_REQUIREMENTS_v0_1.md  HANDBOOK_PERSISTENCE_v0_1.md  HANDBOOK_SPEC_v0_1.md  HANDOFF_GUIDE.md  HANDOFF_MANIFEST.md  HARBOR_PROJECT_REPORT_2026-04-11.md  INDEX.md  LESSONS_LEARNED_2026-04-12_H5_T6_C_session.md  LESSONS_LEARNED_H1_2026-04-11.md  LESSONS_LEARNED_H2_2026-04-11.md  LESSONS_LEARNED_H3_2026-04-11.md  LESSONS_LEARNED_H4_2026-04-11.md  LESSONS_LEARNED_T4_5A_2026-04-10.md  LOCAL_OPERATOR_SURFACE_v0_1.md  MASTERPLAN.md  PERSISTENCE_FOUNDATION_v0_1.md  POSTGRES_BASELINE_v0_1.md  PRODUCT_SCOPE_v0_1.md  PROJECT_REGISTRY_VERTICAL_SLICE_v0_1.md  PROJECT_STATE.md  RELEASE_CHECKLIST_ALPHA.md  RELEASE_CHECKLIST_ALPHA_v0_1.md  RELEASE_NOTES_v0_3_0_alpha.md  REPOSITORY_SCAFFOLDING_v0_1.md  REVIEW_QUEUE_BASELINE_v0_1.md  RUNBOOK_ALPHA_OPERATOR_v0_1.md  RUNTIME_BOUNDARIES_v0_1.md  RUNTIME_CONFIGURATION_v0_1.md  SEARCH_CAMPAIGN_REGISTRY_v0_1.md  SEARCH_RESULT_CANDIDATE_BASELINE_v0_1.md  SEARCH_RUN_REGISTRY_v0_1.md  SOURCE_SLICE_v0_1.md  (+8 more)
docs/_handoff/: HANDOFF_2026-04-08_next_chat.md  HANDOFF_2026-04-10_T4_4B_to_T4_5A.md  HANDOFF_2026-04-10_T4_5A_to_T4_5B.md  HANDOFF_2026-04-11_T4_5B_to_T5_0A.md  HANDOFF_2026-04-11_T5_2A_to_next.md  HANDOFF_2026-04-12_P4_to_next.md  (+26 more)
docs/adr/: README.md
migrations/: README.md  env.py
tests/: conftest.py  test_alembic_migrations.py  test_automation_task_registry_api.py  test_automation_task_registry_unit.py  test_candidate_review_promotion_api.py  test_config_and_error_paths.py  test_db_status.py  test_e2e_workflow_lifecycle.py  test_exceptions_and_transactions.py  test_fetch_now_api.py  test_fetch_source_content.py  test_handbook_api.py  test_handbook_diff_api.py  test_handbook_freshness_api.py  test_health.py  test_input_validation_boundaries.py  test_middleware.py  test_openai_adapter_api.py  test_openai_chat_grounding_snapshots.py  test_operator_fetch_now_ui.py  test_operator_snapshot_ui.py  test_operator_sortable_tables.py  test_operator_web_shell.py  test_overview_api.py  test_overview_fetch_errors.py  test_overview_staleness.py  test_pagination.py  test_pending_actions_api.py  test_projects_api.py  test_review_queue_api.py  test_review_queue_bulk_status.py  test_review_queue_source_promotion_api.py  test_review_queue_validation_edges.py  test_runtime_settings.py  test_scheduler_api.py  test_scheduler_embedded.py  test_search_api.py  test_search_campaign_api.py  test_search_result_candidate_api.py  test_search_run_api.py  (+6 more)
tools/: run_quality_gates.py  task_runner.py
(+70 files in other folders)
