[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harbor"
version = "0.1.4a0"
description = "Harbor project-partitioned research operating system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "openai>=1.0,<2.0",
]
authors = [{ name = "Andreas Keis" }]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.6,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PIE", "LOG", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=harbor --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = [
    "src/harbor/operator_surface.py",
    "src/harbor/openai_operator_surface.py",
]
